re-added davids contentAreaOffScreen fix

--- a/public/styles.css
+++ b/public/styles.css
@@ -335,6 +335,7 @@ section.forms .logo img {
 
 .contentAreaCurrent {
   position: absolute;
+  z-index: 100;
   display: block;
   top: 0rem;
   left: 0rem;
@@ -392,7 +393,7 @@ section.forms .logo img {
 
 .contentAreaOffScreen {
   position: absolute;
-  top: 1000rem;
+  z-index: -1;
   left: 0rem;
   width: 100%;
   height: 100%;
