--- a/src/scss/objects/_appCanvas.scss
+++ b/src/scss/objects/_appCanvas.scss
@@ -7,6 +7,7 @@
 
 .contentAreaCurrent {
   position: absolute;
+  z-index: 100;
   display: block;
   top: 0rem;
   left: 0rem;
@@ -69,7 +70,7 @@
 
 .contentAreaOffScreen {
   position: absolute;
-  top: 1000rem;
+  z-index: -1;
   left: 0rem;
   width: 100%;
   height: 100%;
